src/test/deca/context/valid/personal/declaration_with_intinialisation.deca
// Description:
//    Affectation avec initialisation
//
// Resultats:
//    
// 
// Historique:
//    cree le 06/01/2025

{
    int a=1; //meme si sa suffit il faut tout verifié 
    float b=1.0;
    boolean l=false;
}
