src/test/deca/context/invalid/comparaison_pasmemetype.deca
// Description:
//    comparer 2 type diff 
//
// Resultats:
//erreur
//
//
// Historique:
//    cree le 06/01/2025

{   
    boolean b = 3<false;
}